<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fi.metatavu.oioi.cm</groupId>
  <artifactId>oioi-cm-api</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>OiOi content management API</name>
  <description>OiOi content management API</description>
  <url>https://github.com/Metatavu/oioi-cm-api</url>

  <licenses>
    <license>
      <name>GNU Affero General Public License v3</name>
      <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  
  <developers>
    <developer>
      <name>Metatavu Oy</name>
      <organization>Metatavu Oy</organization>
      <organizationUrl>http://www.metatavu.fi</organizationUrl>
    </developer>
  </developers>
  
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/Metatavu/oioi-cm-api/issues</url>
  </issueManagement>

  <scm>
    <developerConnection>scm:git:git@github.com:Metatavu/oioi-cm-api.git</developerConnection>
    <url>git@github.com:Metatavu/oioi-cm-api.git</url>
    <connection>scm:git:git@github.com:Metatavu/oioi-cm-api.git</connection>
    <tag>HEAD</tag>
  </scm>

  <organization>
    <name>Metatavu Oy</name>
    <url>http://www.metatavu.fi</url>
  </organization>

  <properties>
  
    <!-- Project -->

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       
    <!-- Maven -->

    <java.version>11</java.version>
	  <maven.compiler.source>${java.version}</maven.compiler.source>
	  <maven.compiler.target>${java.version}</maven.compiler.target>
    
    <!-- Wildfly -->
    
    <wildfly.version>17.0.1.Final</wildfly.version>
    
    <!-- Keycloak -->
    
    <keycloak.version>7.0.0</keycloak.version>
    
    <!--  Logging -->
    
    <commons-logging.version>1.2</commons-logging.version>
    <log4j.version>2.11.1</log4j.version>
	  <slf4j-api.version>1.7.22</slf4j-api.version>
    
    <!-- Liquibase -->
    
    <liquibase.version>3.5.3</liquibase.version>
    
  </properties>
  
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.wildfly</groupId>
        <artifactId>wildfly-spec-api</artifactId>
        <version>${wildfly.version}</version>
        <type>pom</type>
        <scope>import</scope>
        <exclusions>
          <exclusion>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M3</version>
      </plugin>
      
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <version>4.1.3</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${project.basedir}/src/main/resources/swagger.yaml</inputSpec>
              <generatorName>jaxrs-spec</generatorName>
              <configOptions>
                <sourceFolder>src/gen/java/main</sourceFolder>'
                <dateLibrary>java8</dateLibrary>
                <java8>true</java8>
                <interfaceOnly>true</interfaceOnly>
                <groupId>fi.metatavu.oioi.cm</groupId>
                <artifactId>oioi-cm-api-spec</artifactId>
                <apiPackage>fi.metatavu.oioi.cm</apiPackage>
                <modelPackage>fi.metatavu.oioi.cm.model</modelPackage>
                <returnResponse>true</returnResponse>
              </configOptions>
            </configuration>
          </execution>
        </executions>
      </plugin>
	    
      <plugin>
        <groupId>org.bsc.maven</groupId>
        <artifactId>maven-processor-plugin</artifactId>
        <executions>
          <execution>
            <id>process</id>
            <goals>
              <goal>process</goal>
            </goals>
            <phase>generate-sources</phase>
            <configuration>
                <fork>true</fork>
                <addCompileSourceRoots>true</addCompileSourceRoots>
                <compilerArguments>--add-modules=java.se.ee -J--add-modules=java.se.ee</compilerArguments>
                <processors><processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
                </processors>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>        
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <version>5.4.2.Final</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.7.8</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <goals>
              <goal>report</goal>
            </goals>
            <phase>test</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
  
    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-core</artifactId>
      <version>${keycloak.version}</version>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-annotations</artifactId>
      <scope>provided</scope>
      <version>1.5.3</version>
    </dependency>

    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-adapter-spi</artifactId>
      <version>${keycloak.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-adapter-core</artifactId>
      <version>${keycloak.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.keycloak</groupId>
      <artifactId>keycloak-admin-client</artifactId>
      <version>${keycloak.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  
    <dependency>
      <groupId>org.jboss.spec.javax.servlet</groupId>
      <artifactId>jboss-servlet-api_4.0_spec</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.wildfly</groupId>
      <artifactId>wildfly-clustering-api</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j-api.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${log4j.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-jaxrs</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.jboss.spec.javax.ws.rs</groupId>
      <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>2.7</version>
    </dependency>
    
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    
    <dependency>
      <groupId>javax.enterprise</groupId>
      <artifactId>cdi-api</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>org.jboss.spec.javax.interceptor</groupId>
      <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>org.jboss.spec.javax.ejb</groupId>
      <artifactId>jboss-ejb-api_3.2_spec</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>org.wildfly</groupId>
      <artifactId>wildfly-ejb3</artifactId>
      <scope>provided</scope>
    </dependency>	
    
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.infinispan</groupId>
      <artifactId>infinispan-core</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcore</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <!-- Jackson -->

    <dependency>
      <groupId>org.jboss.resteasy</groupId>
      <artifactId>resteasy-jackson2-provider</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <scope>provided</scope>
    </dependency>

    <!-- Persistence -->

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-entitymanager</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-cdi</artifactId>
      <version>${liquibase.version}</version>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>itests</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
      
        <plugins>
          
          <plugin>
            <groupId>io.fabric8</groupId>
            <artifactId>docker-maven-plugin</artifactId>
            <configuration>
              <images>
                <image>
                  <name>mysql:5.6</name>
                  <alias>test-oioi-cm-mysql</alias>
                  <run>
                    <ports>
                      <port>3306:3306 </port>
                    </ports>
                    <env>
                      <MYSQL_ROOT_PASSWORD>rootpass</MYSQL_ROOT_PASSWORD>
                      <MYSQL_DATABASE>oioidb</MYSQL_DATABASE>
                      <MYSQL_USER>oioiuser</MYSQL_USER>
                      <MYSQL_PASSWORD>oioipass</MYSQL_PASSWORD>
                    </env>
                    <wait>
                      <log>ready for connections.</log>
                    </wait>
                  </run>
                </image>
                <image>
                  <name>jboss/keycloak:${keycloak.version}</name>
                  <alias>test-oioi-cm-keycloak</alias>
                </image>
                <image>
                  <name>test-oioi-cm-api</name>
                  <build>
                    <dockerFileDir>${project.basedir}</dockerFileDir>
                    <filter>@</filter>
                  </build>
                  <run>
                    <ports>
                      <port>8080:8080</port>
                    </ports>
                    <links> 
                      <link>test-oioi-cm-mysql:test-oioi-cm-mysql</link>
                    </links>                    
                    <env>
                      <OIOI_CM_API_HOST>localhost</OIOI_CM_API_HOST>
                      <OIOI_CM_API_CLUSTER_PASSWORD>clusterpass</OIOI_CM_API_CLUSTER_PASSWORD>
                      <OIOI_CM_API_DB_HOST>test-oioi-cm-mysql</OIOI_CM_API_DB_HOST>
                      <OIOI_CM_API_DB_NAME>oioidb</OIOI_CM_API_DB_NAME>
                      <OIOI_CM_API_DB_USERNAME>root</OIOI_CM_API_DB_USERNAME>
                      <OIOI_CM_API_DB_PASSWORD>rootpass</OIOI_CM_API_DB_PASSWORD>
                      <KUBERNETES_NAMESPACE>test</KUBERNETES_NAMESPACE>
                    </env>
                  </run>
                </image>
              </images>
              <showLogs>true</showLogs>
            </configuration>
            <executions>
              <execution>
                <id>docker-test-oioi-cm-api-build</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>build</goal>
                </goals>
              </execution>
              <execution>
                <id>docker-test-oioi-cm-api-start</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>start</goal>
                </goals>
              </execution>
              <execution>
                <id>docker-test-oioi-cm-api-stop</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>stop</goal>
                </goals>
              </execution>
            </executions>
          </plugin>        

          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>wait-maven-plugin</artifactId>
            <version>1.0</version>
            <executions>
              <execution>
                <id>wait</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>wait</goal>
                </goals>      
                <configuration>
                  <protocol>http</protocol>
                  <host>localhost</host>
                  <port>8080</port>
                  <file>/v1/system/ping</file>
                  <maxcount>20</maxcount>
                  <timeout>10000</timeout>
                </configuration>
              </execution>
            </executions>
          </plugin>

        </plugins>

      </build>
    </profile>  
  </profiles>  
  
  <repositories>  
    <repository>
      <id>sonatype-nexus-snapshots</id>
      <snapshots/>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
  </repositories>
  
</project>
